// Copyright 2022 Lekko Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package lekko.bff.v1beta1;

// Services FE Auth.
service AuthService {
  // We will return required auth info in a cookie
  // that is sent to the same origin for other requests
  // inside the bff service.
  rpc Login(LoginRequest) returns (LoginResponse) {}
  // Returns a response indicating if the account already
  // existed.
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  bool account_existed = 1;
}
